# buddhist-practice-assistant

./: README.md  index.html  package-lock.json  package.json  sw.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy-and-release.yml  deploy.yml
assets/: index-63e5cdd4.js  index-ce059c74.css
public/: manifest.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
